# wikisentences

./: .gitignore  Makefile  README.md  cleanup.sed  prepare_train_set.sh  pyproject.toml  remove_english.sh  segmenter.py  symbols.py  utils.py  wikis.py  wikis.txt
